# learn-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  notebooks.yml
data-analyst/: README.md  calendar_analysis.ipynb  hypothesis_testing.ipynb
data-analyst/data/: calendar.ics
machine-learning-scientist/1-supervised-learning/: 1_knn.ipynb  2_linear_regression.ipynb  3_regularized_regression.ipynb  4_logistic_regression.ipynb  5_hyperparameter_tuning.ipynb  6_preprocessing.ipynb
machine-learning-scientist/2-unsupervised-learning/: 1_kmeans.ipynb  2_hierarchical_clustering.ipynb  3_dimensionality_reduction.ipynb
machine-learning-scientist/8-design-forecasting-pipelines-for-production/: 1_design_forecasting_pipelines_for_prod.ipynb
machine-learning-scientist/design-forecasting-pipelines-for-production/: 1_design_forecasting_pipelines_for_prod.ipynb
machine-learning-scientist/projects/: clustering_antarctic_penguin_species.ipynb  predicting_movie_rental_durations.ipynb  predictive_modeling_for_agriculture.ipynb
playground/: README.md  prophet.ipynb
take-home-challenge/1-convention-rate/: conversion_rate.ipynb  summary.ipynb
take-home-challenge/2-spanish-translation-ab-test/: spanish.ipynb
take-home-challenge/3-employee-retention/: decision_tree  employee_retention.ipynb  notes.ipynb
take-home-challenge/4-identifying-fraudulent-activities/: decision_tree  decision_tree.ipynb  identify_fraudulents.ipynb  notes.ipynb
take-home-challenge/5-funnel-analysis/: funnel_analysis.ipynb
(+5 files in other folders)
