[project]
name = "learn-python"
version = "0.1.0"
description = "Python learning repo: data analysis and machine learning tracks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pandas>=1.3",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scikit-learn>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
]
